Motoman/MotoComSDK/motocom32dll/header/vb.net/MotoCom32.vb

	
	' /****************************************************/
	' /****************   BSC     *************************/
	' /****************************************************/
	' /* bsc3.h */
	' /*  "COM1:9600,E,8,1" */
	Declare Function BscCancel Lib "MotoCom32"  Alias "_BscCancel@4"(ByVal nCid As Short) As Short
	Declare Function BscChangeTask Lib "MotoCom32"  Alias "_BscChangeTask@8"(ByVal nCid As Short, ByVal task As Short) As Short
	Declare Function BscClose Lib "MotoCom32"  Alias "_BscClose@4"(ByVal nCid As Short) As Short
	'Declare Function BscCloseAll Lib "MotoCom32" Alias "_BscCloseAll@4" (ByVal nCiddummy%) As Integer
	Declare Function BscCommand Lib "MotoCom32"  Alias "_BscCommand@16"(ByVal nCid As Short, ByVal h_buf As String, ByVal d_buf As String, ByVal fforever As Short) As Short
	Declare Function BscConnect Lib "MotoCom32"  Alias "_BscConnect@4"(ByVal nCid As Short) As Short
	Declare Function BscContinueJob Lib "MotoCom32"  Alias "_BscContinueJob@4"(ByVal nCid As Short) As Short
	Declare Function BscConvertJobP2R Lib "MotoCom32"  Alias "_BscConvertJobP2R@12"(ByVal nCid As Short, ByVal name_v As String, ByVal framename As String) As Short
	Declare Function BscConvertJobR2P Lib "MotoCom32"  Alias "_BscConvertJobR2P@16"(ByVal nCid As Short, ByVal name_v As String, ByVal cv_type As Short, ByVal var_no As String) As Short
	Declare Function BscDCIGetPos Lib "MotoCom32"  Alias "_BscDCIGetPos@16"(ByVal nCid As Short, ByRef type_v As Short, ByRef rconf As Short, ByRef p As Double) As Short
	Declare Function BscDCIGetPos2 Lib "MotoCom32"  Alias "_BscDCIGetPos2@20"(ByVal nCid As Short, ByRef type_v As Short, ByRef rconf As Short, ByRef p As Double, ByRef axisNum As Short) As Short
	Declare Function BscDCIGetVarData Lib "MotoCom32"  Alias "_BscDCIGetVarData@20"(ByVal nCid As Short, ByRef type_v As Short, ByRef rconf As Short, ByRef p As Double, ByVal s As String) As Short
	Declare Function BscDCIGetVarDataEx Lib "MotoCom32"  Alias "_BscDCIGetVarDataEx@24"(ByVal nCid As Short, ByRef type_v As Short, ByRef rconf As Integer, ByRef p As Double, ByVal s As String, ByRef axisNum As Short) As Short
	Declare Function BscDCILoadSave Lib "MotoCom32"  Alias "_BscDCILoadSave@8"(ByVal nCid As Short, ByVal timec As Short) As Short
	Declare Function BscDCILoadSaveOnce Lib "MotoCom32"  Alias "_BscDCILoadSaveOnce@4"(ByVal nCid As Short) As Short
	Declare Function BscDCIPutPos Lib "MotoCom32"  Alias "_BscDCIPutPos@16"(ByVal nCid As Short, ByVal type_v As Short, ByVal rconf As Short, ByRef p As Double) As Short
	Declare Function BscDCIPutPos2 Lib "MotoCom32"  Alias "_BscDCIPutPos2@20"(ByVal nCid As Short, ByVal type_v As Short, ByVal rconf As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscDCIPutVarData Lib "MotoCom32"  Alias "_BscDCIPutVarData@20"(ByVal nCid As Short, ByVal type_v As Short, ByVal rconf As Short, ByRef p As Double, ByVal s As String) As Short
	Declare Function BscDCIPutVarDataEx Lib "MotoCom32"  Alias "_BscDCIPutVarDataEx@24"(ByVal nCid As Short, ByVal type_v As Short, ByVal rconf As Integer, ByRef p As Double, ByVal s As String, ByVal axisNum As Short) As Short
	'Declare Function BscDelay Lib "MotoCom32" Alias "_BscDelay@8" (ByVal nCid%, ByVal a&) As Integer
	Declare Function BscDeleteJob Lib "MotoCom32"  Alias "_BscDeleteJob@4"(ByVal nCid As Short) As Short
	Declare Function BscDisConnect Lib "MotoCom32"  Alias "_BscDisConnect@4"(ByVal nCid As Short) As Short
	Declare Function BscDiskFreeSizeGet Lib "MotoCom32"  Alias "_BscDiskFreeSizeGet@12"(ByVal nCid As Short, ByVal dno As Short, ByRef dsize As Integer) As Short
	Declare Function BscDownLoad Lib "MotoCom32"  Alias "_BscDownLoad@8"(ByVal nCid As Short, ByVal fname As String) As Short
	Declare Function BscDownLoadEx Lib "MotoCom32"  Alias "_BscDownLoadEx@16"(ByVal nCid As Short, ByVal fname As String, ByVal srcPath As String, ByVal nFlg As Boolean) As Short
	Declare Function BscEnforcedClose Lib "MotoCom32"  Alias "_BscEnforcedClose@4"(ByVal nCid As Short) As Short
	Declare Function BscFindFirst Lib "MotoCom32"  Alias "_BscFindFirst@12"(ByVal nCid As Short, ByVal fname As String, ByVal size As Short) As Short
	Declare Function BscFindFirstMaster Lib "MotoCom32"  Alias "_BscFindFirstMaster@12"(ByVal nCid As Short, ByVal fname As String, ByVal size As Short) As Short
	Declare Function BscFindNext Lib "MotoCom32"  Alias "_BscFindNext@12"(ByVal nCid As Short, ByVal fname As String, ByVal size As Short) As Short
	Declare Function BscFindNextMaster Lib "MotoCom32"  Alias "_BscFindNextMaster@12"(ByVal nCid As Short, ByVal fname As String, ByVal size As Short) As Short
	'Declare Function BscGetAbso Lib "MotoCom32" Alias "_BscGetAbso@12" (ByVal nCid%, ByVal axisno%, abso&) As Integer
	Declare Function BscGetCartPos Lib "MotoCom32"  Alias "_BscGetCartPos@24"(ByVal nCid As Short, ByVal framename As String, ByVal isex As Short, ByRef rconf As Integer, ByRef toolno As Short, ByRef p As Double) As Short
	Declare Function BscGetCtrlGroup Lib "MotoCom32"  Alias "_BscGetCtrlGroup@12"(ByVal nCid As Short, ByRef groupinf As Short, ByRef taskinf As Short) As Short
	Declare Function BscGetCtrlGroupDx Lib "MotoCom32"  Alias "_BscGetCtrlGroupDx@16"(ByVal nCid As Short, ByRef robtask As Integer, ByRef stattask As Integer, ByRef taskinf As Short) As Short
	Declare Function BscGetCtrlGroupXrc Lib "MotoCom32"  Alias "_BscGetCtrlGroupXrc@16"(ByVal nCid As Short, ByRef robtask As Short, ByRef stattask As Short, ByRef taskinf As Short) As Short
	Declare Function BscGetError Lib "MotoCom32"  Alias "_BscGetError@4"(ByVal nCid As Short) As Short
	Declare Function BscGetError2 Lib "MotoCom32"  Alias "_BscGetError2@4"(ByVal nCid As Short) As Short
	Declare Function BscGetFirstAlarm Lib "MotoCom32"  Alias "_BscGetFirstAlarm@8"(ByVal nCid As Short, ByRef data_v As Short) As Short
	Declare Function BscGetFirstAlarmS Lib "MotoCom32"  Alias "_BscGetFirstAlarmS@12"(ByVal nCid As Short, ByRef data_v As Short, ByVal s As String) As Short
	Declare Function BscGetNextAlarm Lib "MotoCom32"  Alias "_BscGetNextAlarm@8"(ByVal nCid As Short, ByRef data_v As Short) As Short
	Declare Function BscGetNextAlarmS Lib "MotoCom32"  Alias "_BscGetNextAlarmS@12"(ByVal nCid As Short, ByRef data_v As Short, ByVal s As String) As Short
	Declare Function BscGetPulsePos Lib "MotoCom32"  Alias "_BscGetPulsePos@8"(ByVal nCid As Short, ByRef p As Double) As Short
	Declare Function BscGets Lib "MotoCom32"  Alias "_BscGets@16"(ByVal nCid As Short, ByVal bufptr As String, ByVal bsize As Short, ByRef plengets As Short) As Short
	Declare Function BscGetStatus Lib "MotoCom32"  Alias "_BscGetStatus@12"(ByVal nCid As Short, ByRef d1 As Short, ByRef d2 As Short) As Short
	Declare Function BscGetUFrame Lib "MotoCom32"  Alias "_BscGetUFrame@12"(ByVal nCid As Short, ByVal ufname As String, ByRef p As Double) As Short
	Declare Function BscGetVarData Lib "MotoCom32"  Alias "_BscGetVarData@16"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef pos As Double) As Short
	Declare Function BscGetVarData2 Lib "MotoCom32"  Alias "_BscGetVarData2@16"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef pos As Double) As Short
	Declare Function BscGetVarDataEx Lib "MotoCom32"  Alias "_BscGetVarDataEx@24"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef pos As Double, ByVal s As String, ByRef axisNum As Short) As Short
	Declare Function BscHoldOff Lib "MotoCom32"  Alias "_BscHoldOff@4"(ByVal nCid As Short) As Short
	Declare Function BscHoldOn Lib "MotoCom32"  Alias "_BscHoldOn@4"(ByVal nCid As Short) As Short
    Declare Function BscHostGetVarData Lib "MotoCom32" Alias "_BscHostGetVarData@20" (ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef pos As Double, ByVal s As String) As Short
	Declare Function BscHostGetVarDataM Lib "MotoCom32"  Alias "_BscHostGetVarDataM@20"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByVal num As Short, ByRef pos As Double) As Short
	Declare Function BscHostPutVarData Lib "MotoCom32"  Alias "_BscHostPutVarData@20"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByRef dat As Double, ByVal s As String) As Short
	Declare Function BscHostPutVarDataM Lib "MotoCom32"  Alias "_BscHostPutVarDataM@20"(ByVal nCid As Short, ByVal type_v As Short, ByVal varno As Short, ByVal num As Short, ByRef dat As Double) As Short
	Declare Function BscImov Lib "MotoCom32"  Alias "_BscImov@28"(ByVal nCid As Short, ByVal vtype As String, ByVal spd As Double, ByVal framename As String, ByVal toolno As Short, ByRef p As Double) As Short
	Declare Function BscImovEx Lib "MotoCom32"  Alias "_BscImovEx@32"(ByVal nCid As Short, ByVal vtype As String, ByVal spd As Double, ByVal framename As String, ByVal toolno As Short, ByRef p As Double, ByVal axisNum As Short) As Short
	Declare Function BscInBytes Lib "MotoCom32"  Alias "_BscInBytes@4"(ByVal nCid As Short) As Short
	Declare Function BscIsAlarm Lib "MotoCom32"  Alias "_BscIsAlarm@4"(ByVal nCid As Short) As Short
	Declare Function BscIsCtrlGroup Lib "MotoCom32"  Alias "_BscIsCtrlGroup@4"(ByVal nCid As Short) As Short
	Declare Function BscIsCtrlGroupDx Lib "MotoCom32"  Alias "_BscIsCtrlGroupDx@12"(ByVal nCid As Short, ByRef robtask As Integer, ByRef stattask As Integer) As Short
	Declare Function BscIsCtrlGroupXrc Lib "MotoCom32"  Alias "_BscIsCtrlGroupXrc@12"(ByVal nCid As Short, ByRef robtask As Short, ByRef stattask As Short) As Short
	Declare Function BscIsCycle Lib "MotoCom32"  Alias "_BscIsCycle@4"(ByVal nCid As Short) As Short
	Declare Function BscIsError Lib "MotoCom32"  Alias "_BscIsError@4"(ByVal nCid As Short) As Short
	Declare Function BscIsErrorCode Lib "MotoCom32"  Alias "_BscIsErrorCode@4"(ByVal nCid As Short) As Short
	Declare Function BscIsHold Lib "MotoCom32"  Alias "_BscIsHold@4"(ByVal nCid As Short) As Short
	Declare Function BscIsJobLine Lib "MotoCom32"  Alias "_BscIsJobLine@4"(ByVal nCid As Short) As Short
	Declare Function BscIsJobName Lib "MotoCom32"  Alias "_BscIsJobName@12"(ByVal nCid As Short, ByVal jobname As String, ByVal size As Short) As Short
	Declare Function BscIsJobStep Lib "MotoCom32"  Alias "_BscIsJobStep@4"(ByVal nCid As Short) As Short
	Declare Function BscIsLoc Lib "MotoCom32"  Alias "_BscIsLoc@16"(ByVal nCid As Short, ByVal ispulse As Short, ByRef rconf As Short, ByRef p As Double) As Short
	Declare Function BscIsPlayMode Lib "MotoCom32"  Alias "_BscIsPlayMode@4"(ByVal nCid As Short) As Short
	Declare Function BscIsRemoteMode Lib "MotoCom32"  Alias "_BscIsRemoteMode@4"(ByVal nCid As Short) As Short
	Declare Function BscIsRobotPos Lib "MotoCom32"  Alias "_BscIsRobotPos@24"(ByVal nCid As Short, ByVal framename As String, ByVal isex As Short, ByRef rconf As Short, ByRef toolno As Short, ByRef p As Double) As Short
	Declare Function BscIsServo Lib "MotoCom32"  Alias "_BscIsServo@4"(ByVal nCid As Short) As Short
	Declare Function BscIsTaskInf Lib "MotoCom32"  Alias "_BscIsTaskInf@4"(ByVal nCid As Short) As Short
	Declare Function BscIsTaskInfDx Lib "MotoCom32"  Alias "_BscIsTaskInfDx@4"(ByVal nCid As Short) As Short
	Declare Function BscIsTaskInfXrc Lib "MotoCom32"  Alias "_BscIsTaskInfXrc@4"(ByVal nCid As Short) As Short
	Declare Function BscIsTeachMode Lib "MotoCom32"  Alias "_BscIsTeachMode@4"(ByVal nCid As Short) As Short
	Declare Function BscJobWait Lib "MotoCom32"  Alias "_BscJobWait@8"(ByVal nCid As Short, ByVal time As Short) As Short
	Declare Function BscMDSP Lib "MotoCom32"  Alias "_BscMDSP@8"(ByVal nCid As Short, ByVal ptr As String) As Short
	Declare Function BscMov Lib "MotoCom32"  Alias "_BscMov@36"(ByVal nCid As Short, ByVal movtype As String, ByVal vtype As String, ByVal spd As Double, ByVal framename As String, ByVal rconf As Short, ByVal toolno As Short, ByRef p As Double) As Short
